Update HelloWorld for ML.ipynb

--- a/HelloWorld for ML.ipynb
+++ b/HelloWorld for ML.ipynb
@@ -18,18 +18,18 @@
    "metadata": {},
    "source": [
     "model = Sequential([Dense(units = 1, input_shape = [1])]) \n",
-    "# Calling sequential model\n",
-    "# In tensorflow, we define layers using Sequential. In this case there is only one layer and one neuron \n",
-    "# Dense means fully connected neurons for evey layers, units = 1 indicates that theres only one layer, input_shape indicates the input array shape\n",
+    "- Calling sequential model\n",
+    "- In tensorflow, we define layers using Sequential. In this case there is only one layer and one neuron \n",
+    "- Dense means fully connected neurons for evey layers, units = 1 indicates that theres only one layer, input_shape indicates the input array shape\n",
     "\n",
     "model.compile(optimizer = 'sgd', loss = 'mean_squared_error')\n",
-    "# This is the part where maths comes in\n",
-    "# sgd stands for stochastic gradient scenarios (a type of optimizer)\n",
-    "# Optimizer is used to minimize the loss by calculating the errors (or loss) on the previous guess can then generate another one\n",
+    "- This is the part where maths comes in\n",
+    "- sgd stands for stochastic gradient scenarios (a type of optimizer)\n",
+    "- Optimizer is used to minimize the loss by calculating the errors (or loss) on the previous guess can then generate another one\n",
     "\n",
     "model.fit(xs, ys, epochs=500)\n",
-    "# We can read this as fit the Xs to the Ys, and try it 500 times\n",
-    "# Then the process is being repeated for 500 times and each time the optimizer capture the loss value and optimizes the algorithm\n",
+    "- We can read this as fit the Xs to the Ys, and try it 500 times\n",
+    "- Then the process is being repeated for 500 times and each time the optimizer capture the loss value and optimizes the algorithm\n",
     "\n",
     "The term prediction is typically used when dealing with ML models.\n",
     "This term is used because we are dealing with a certain amount of uncertainties instead of predicting the future.\n",
