--- a/CNN (not-centered).ipynb
+++ b/CNN (not-centered).ipynb
@@ -60,15 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_15328/3433296290.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\cheok\\AppData\\Local\\Temp/ipykernel_15328/3433296290.py\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    class_mode = 'binary'\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1027 images belonging to 2 classes.\n"
      ]
     }
    ],
@@ -82,6 +81,68 @@
     "    target_size = (300, 300),\n",
     "    class_mode = 'binary'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CNN Architecture for Horses and Humans\n",
+    "\n",
+    "model = Sequential([\n",
+    "                    Conv2D(16, (3, 3), activation = 'relu', input_shape = (300, 300, 3)),\n",
+    "                    MaxPooling2D(2, 2),\n",
+    "                    Conv2D(32, (3, 3), activation = 'relu'),\n",
+    "                    MaxPooling2D(2, 2),\n",
+    "                    Conv2D(64, (3, 3), activation = 'relu'),\n",
+    "                    MaxPooling2D(2, 2),\n",
+    "                    Conv2D(64, (3, 3), activation = 'relu'),\n",
+    "                    MaxPooling2D(2, 2),\n",
+    "                    Conv2D(64, (3, 3), activation = 'relu'),\n",
+    "                    MaxPooling2D(2, 2),\n",
+    "                    Flatten(),\n",
+    "                    Dense(512, activation = 'relu'),\n",
+    "                    Dense(1, activation = 'sigmoid')\n",
+    "])\n",
+    "\n",
+    "# model.summary()\n",
+    "\n",
+    "# Compiling model\n",
+    "model.compile(loss = 'binary_crossentropy',\n",
+    "              optimizer = RMSprop(lr = 0.001),\n",
+    "              metrics = ['accuracy'])\n",
+    "\n",
+    "# Older generations uses model.fit_generator while the later can use either fit or that\n",
+    "model.fit(train_generator, epochs = 15)\n",
+    "\n",
+    "model.evaluate(train_generator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validation\n",
+    "- To add validation, you'll need a validation dataset that's separated from the training dataset.\n",
+    "- In some case you'll get a master dataset that you have to split yourself\n",
+    "\n",
+    "Difference between Training Data and Validation data and Testing Data\n",
+    "- Training data is the data that is used to teach the network how the data and labels fit together.\n",
+    "- Validation data is used to see how the network is doing with previously unseen data while you are training\n",
+    "- Test data is used after training to see how the network does with data it has never priviously seen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding Validation to the Horses or Humans Dataset\n",
+    "\n",
+    "validation_url = \"https://storage.googleapis.com/laurencemoroney-blog.appspot.com/validation-horse-or-human.zip\"\n"
    ]
   }
  ],
