added validation data

--- a/CNN (not-centered).ipynb
+++ b/CNN (not-centered).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,8 @@
     "import zipfile\n",
     "import progressbar\n",
     "\n",
+    "from tensorflow.keras import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPooling2D\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
    ]
   },
@@ -60,6 +62,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding Validation to the Horses or Humans Dataset\n",
+    "\n",
+    "validation_url = \"https://storage.googleapis.com/laurencemoroney-blog.appspot.com/validation-horse-or-human.zip\"\n",
+    "\n",
+    "validation_file_name = \"validation-horse-or-human.zip\"\n",
+    "validation_dir = \"horse-or-human/validation/\"\n",
+    "urlretrieve(validation_url, validation_file_name, show_progress) # show_progress is for progression bar\n",
+    "\n",
+    "zip_ref = zipfile.ZipFile(validation_file_name, 'r')\n",
+    "zip_ref.extractall(validation_dir)\n",
+    "zip_ref.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -81,6 +102,36 @@
     "    target_size = (300, 300),\n",
     "    class_mode = 'binary'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generating Validation data\n",
+    "validation_datagen = ImageDataGenerator(rescale = 1/255)\n",
+    "\n",
+    "validation_generator = train_datagen.flow_from_directory(\n",
+    "    validation_dir,\n",
+    "    target_size = (300, 300),\n",
+    "    class_mode = 'binary'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validation\n",
+    "- To add validation, you'll need a validation dataset that's separated from the training dataset.\n",
+    "- In some case you'll get a master dataset that you have to split yourself\n",
+    "\n",
+    "Difference between Training Data and Validation data and Testing Data\n",
+    "- Training data is the data that is used to teach the network how the data and labels fit together.\n",
+    "- Validation data is used to see how the network is doing with previously unseen data while you are training\n",
+    "- Test data is used after training to see how the network does with data it has never priviously seen"
    ]
   },
   {
@@ -115,34 +166,9 @@
     "              metrics = ['accuracy'])\n",
     "\n",
     "# Older generations uses model.fit_generator while the later can use either fit or that\n",
-    "model.fit(train_generator, epochs = 15)\n",
+    "model.fit(train_generator, epochs = 15, validation_data = validation_generator)\n",
     "\n",
     "model.evaluate(train_generator)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Validation\n",
-    "- To add validation, you'll need a validation dataset that's separated from the training dataset.\n",
-    "- In some case you'll get a master dataset that you have to split yourself\n",
-    "\n",
-    "Difference between Training Data and Validation data and Testing Data\n",
-    "- Training data is the data that is used to teach the network how the data and labels fit together.\n",
-    "- Validation data is used to see how the network is doing with previously unseen data while you are training\n",
-    "- Test data is used after training to see how the network does with data it has never priviously seen"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Adding Validation to the Horses or Humans Dataset\n",
-    "\n",
-    "validation_url = \"https://storage.googleapis.com/laurencemoroney-blog.appspot.com/validation-horse-or-human.zip\"\n"
    ]
   }
  ],
